will I ever stop finding bugs fixing question field offcenter

--- a/src/index.css
+++ b/src/index.css
@@ -104,7 +104,7 @@ input[type=password] {
      font-weight: 600;
      font-size: 20px;
      position: absolute;
-     left: 65px;
+     left: 55px;
      padding-top: 15px;
 }
 
@@ -233,6 +233,7 @@ input[type=password] {
      text-align: left;
      font-size: 14px;
 }
+
 
 @media only screen and (min-width: 700px) {
      h1 {
